# cmake-vcpkg-starter

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  init.bat
